syntax = "proto3";
package modoki;

option go_package = "modoki";

message SignInRequest {}

message SignInResponse {
  string redirect_uri = 1;
  string state = 2;
}

message SignOutRequest {}

message SignOutResponse {}

message CallbackRequest {
  string code = 1;
  string state = 2;
}

message CallbackResponse {}

service Auth {
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignOut(SignOutRequest) returns (SignOutResponse);
  rpc Callback(CallbackRequest) returns (CallbackResponse);
}